update: alcaldia y ediles

--- a/alcaldia.html
+++ b/alcaldia.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ediles Comuna 17 | Dashboard Comuna 17</title>
+    <title>Alcaldía | Dashboard Comuna 17</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./style.css">
@@ -122,73 +122,69 @@
                             </div>
                         </div> 
                         <div class="widget comentarios list-group">
-                            <h3 class="titulo">Preguntas Frecuentes</h3>
+                            <h3 class="titulo">Enlaces de Interés</h3>
                             <ul class="list-group">
-                              <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#faq-1">
-                                <li class="list-group-item">¿Cuáles son los deberes del Alcalde?</i></span>
+                              <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#enlaces-1">
+                                <li class="list-group-item">Indicadores de Gestión</i></span>
                                 </li>
                               </button> 
-                                  <div class="collapse" id="faq-1">
+                                  <div class="collapse" id="enlaces-1">
                                     <ul class="btn-toggle-nav list-unstyled">
                                     <li class="list-group-item">
-                                        Los concejales representan a los ciudadanos
-                                        y tienen dos funciones principales:</br>
-                                        1. Debatir Proyectos de Acuerdo.</br>
-                                        2. Ejercer control político a las actuaciones 
-                                        de la Alcaldía.Su número depende del número de habitantes.</br></br> 
-                                        En Cali se eligen 21 concejales porque de acuerdo al 
-                                        Censo de Población, la Ciudad tiene más de 1.000.000 de 
-                                        habitantes. </br></br>
-                                        Los concejales son elegidos cada tres años, 
-                                        conjuntamente con el Alcalde. Los asuntos referidos a su gestión se establecen en Acuerdos, los cuales deben
-                                        ajustarse a las funciones que constitucional y legalmente 
-                                        le corresponden. </br></br>
-                                        El Concejo Municipal de 
-                                        Cali, por mandato 
-                                        constitucional, cumple 
-                                        diferentes funciones, entre ellas 
-                                        estudiar, aprobar y rechazar Proyectos de 
-                                        Acuerdo, así como presentar iniciativas 
-                                        normativas siempre y cuando, según lo 
-                                        establecido en la ley 136 de 1994, no tengan 
-                                        impacto fiscal en las finanzas municipales
+                                      <a href="https://indicadores.cali.gov.co/consulta-indicadores/dimensiones-sis#" target="_blank" rel="noopener noreferrer">Sistema de Indicadores Sociales SIS</a>
+                                      <br>
+                                      <a href="https://www.calicomovamos.org.co/" target="_blank" rel="noopener noreferrer">Cali Cómo Vamos</a>
+                                      <br>
+                                      <a href="https://www.javerianacali.edu.co/observatorio-cali-visible" target="_blank" rel="noopener noreferrer">Observatorio Cali Visible</a>
+                                      <br>
+                                      <a href="https://app.powerbi.com/view?r=eyJrIjoiNzI4ZjRmYWEtMWU0MS00N2Q3LTg2ODItZTAwMjA3OTE4MjAwIiwidCI6Ijg1NjEzY2JkLTVkZDktNDViMS04YTNlLTkyM2VlYzljZWVjZCJ9" target="_blank" rel="noopener noreferrer">Dashboard Patrones de Contratación</a>
+
                                     </li>
-                                  </div>
-                              <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#faq-2">
-                                <li class="list-group-item">¿Cómo funciona el Concejo?</i></span>
-                                </li>
-                              </button> 
-                                  <div class="collapse" id="faq-2">
-                                    <ul class="btn-toggle-nav list-unstyled">
-                                    <li class="list-group-item">
-                                      El Concejo de Cali se reúne ordinariamente cuatro veces al año, específicamente el primero de agosto, noviembre, febrero y mayo. Estas sesiones tienen una duración inicial de treinta días, con la posibilidad de ser prorrogadas por diez días más a discreción del Concejo.
-                                    </br></br>
-                                      Además de las reuniones ordinarias, el Concejo puede convocarse extraordinariamente por decisión del Alcalde. En estas ocasiones, se abordan exclusivamente los asuntos que la autoridad que los convocó somete a su consideración.
-                                      </br></br>
-                                      En Cali, el Concejo se divide en tres comisiones: Comisión de Plan y Tierras, Comisión 
-                                      de Institutos y Comisión de Presupuesto. </br></br>
-                                      De las sesiones se levantan actas que contienen la 
-                                      relación de los temas tratados, las personas que 
-                                      intervienen, los mensajes, proposiciones y decisiones 
-                                      adoptadas.  
-                                    </li>
-                                  </div>
-                              <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#faq-3">
-                                <li class="list-group-item">¿Por qué es importante hacer seguimiento al Concejo?</i></span>
-                                </li>
-                              </button> 
-                                  <div class="collapse" id="faq-3">
-                                    <ul class="btn-toggle-nav list-unstyled">
-                                    <li class="list-group-item">
-                                      Hacer seguimiento al Concejo de Cali hace 
-                                      parte del ejercicio de control social que la 
-                                      Constitución Nacional de Colombia facultó 
-                                      a la sociedad civil. Aunque, se puede entender como un ejercicio democrático de cara 
-                                      al presente, también exige pensar prospectivamente la ciudad y la región que queremos construir en el mediano y largo plazo.    </li>
                                   </div>
                             </ul>
                         </div>
 
+                        <div class="widget comentarios list-group">
+                          <h3 class="titulo">Preguntas Frecuentes</h3>
+                          <ul class="list-group">
+                            <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#faq-1">
+                              <li class="list-group-item">¿Cuáles son los deberes del Alcalde?</i></span>
+                              </li>
+                            </button> 
+                                <div class="collapse" id="faq-1">
+                                  <ul class="btn-toggle-nav list-unstyled">
+                                  <li class="list-group-item">
+                                    La Alcaldía de Cali asume una variedad de responsabilidades esenciales, 
+                                    desde la planificación y ejecución de políticas locales hasta la gestión de servicios 
+                                    públicos fundamentales, el mantenimiento de la infraestructura urbana y la promoción del bienestar 
+                                    ciudadano. Su labor abarca áreas como educación, salud, transporte y desarrollo económico, 
+                                    buscando siempre mejorar la calidad de vida de los habitantes de Cali.
+                                  </li>
+                                </div>
+                            <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#faq-2">
+                              <li class="list-group-item">¿Cómo se estructura el gobierno municipal en Cali?</i></span>
+                              </li>
+                            </button> 
+                                <div class="collapse" id="faq-2">
+                                  <ul class="btn-toggle-nav list-unstyled">
+                                  <li class="list-group-item">
+                                    El gobierno municipal de Cali sigue una estructura que incluye un alcalde como líder ejecutivo, 
+                                    quien trabaja en conjunto con un concejo municipal compuesto por concejales. 
+                                    Estos concejales desempeñan un papel crucial en la toma de decisiones y la aprobación 
+                                    de políticas locales. La colaboración entre el alcalde y el concejo es fundamental 
+                                    para la gobernanza efectiva de la ciudad.
+                                  </li>
+                                </div>
+                            <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#faq-3">
+                              <li class="list-group-item">¿Cuáles son proyectos destacados recientes de la Alcaldía de Cali?</i></span>
+                              </li>
+                            </button> 
+                                <div class="collapse" id="faq-3">
+                                  <ul class="btn-toggle-nav list-unstyled">
+                                  <li class="list-group-item">
+                                    La Alcaldía de Cali ha dirigido esfuerzos hacia proyectos significativos. Estos incluyen iniciativas para mejorar la infraestructura vial, el transporte público, la expansión de espacios verdes y programas sociales que buscan fortalecer la inclusión y la calidad de vida de la población.</div>
+                          </ul>
+                      </div>
                         <div class="widget nueva_entrada">
                             <h3 class="titulo">Deja tu denuncia</h3>
                             <form action="">
