--- a/dashboard-cataya.html
+++ b/dashboard-cataya.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Barrio Gran Limonar II y III</title>
+    <title>Gran Limonar Cataya | Dashboard Comuna 17</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./style.css">
@@ -52,7 +52,7 @@
                 <div class="collapse" id="elecciones-collapse">
                   <ul class="btn-toggle-nav list-unstyled">
                     <li><a href="concejo.html" class="link rounded">- Concejo</a></li>
-                    <li><a href="ediles.html" class="link rounded">- Ediles</a></li>
+                    <li><a href="ediles.html" class="link rounded">- Ediles Comuna 17</a></li>
                     <li><a href="alcaldia.html" class="link rounded">- Alcaldía</a></li>
                   </ul>
                 </div>
