--- a/concejo.html
+++ b/concejo.html
@@ -52,7 +52,7 @@
                 <div class="collapsed" id="elecciones-collapse">
                   <ul class="btn-toggle-nav list-unstyled">
                     <li><a href="concejo.html" class="link rounded">- Concejo</a></li>
-                    <li><a href="ediles.html" class="link rounded">- Ediles</a></li>
+                    <li><a href="ediles.html" class="link rounded">- Ediles Comuna 17</a></li>
                     <li><a href="alcaldia.html" class="link rounded">- Alcaldía</a></li>
                   </ul>
                 </div>
