--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
                         <div class="widget convenciones">
                             <h3 class="titulo">Convenciones</h3>
                             <div class="contenedor d-flex flex-wrap">
+                              <button id="toggleConvenciones">Activar/Desactivar Convenciones</button>
+
                                 <div class="contenedor d-flex flex-wrap">
                                   <div class="caja">
                                       <i class="icon-book-open" style="color: yellow;"></i>
