--- a/alcaldia.html
+++ b/alcaldia.html
@@ -133,7 +133,7 @@
                                     <li class="list-group-item">
                                       <a href="https://indicadores.cali.gov.co/consulta-indicadores/dimensiones-sis#" target="_blank" rel="noopener noreferrer">Sistema de Indicadores Sociales SIS</a>
                                       <br>
-                                      <a href="https://www.calicomovamos.org.co/" target="_blank" rel="noopener noreferrer">Cali Cómo Vamos</a>
+                                      <a href="https://www.calicomovamos.org.co/icv-2023" target="_blank" rel="noopener noreferrer">Cali Cómo Vamos 2023</a>
                                       <br>
                                       <a href="https://www.javerianacali.edu.co/observatorio-cali-visible" target="_blank" rel="noopener noreferrer">Observatorio Cali Visible</a>
                                       <br>
